# instant

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.circleci/: config.yml
src/: instant.rs  lib.rs  native.rs  wasm.rs
tests/: wasm.rs
