[package]
name = "instant"
version = "0.1.0"
authors = ["sebcrozet <developer@crozet.re>"]
description = "A partial replacement for std::time::Instant that works on WASM too."
repository = "https://github.com/sebcrozet/instant"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [ "time", "wasm" ]
edition = "2018"


[features]
now = [ "time" ]

[target.'cfg(not(any(feature = "stdweb", feature = "wasm-bindgen")))'.dependencies]
time = { version = "0.1", optional = true }

[target.wasm32-unknown-unknown.dependencies]
stdweb = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[target.wasm32-unknown-emscripten.dependencies]
stdweb = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[target.asmjs-unknown-emscripten.dependencies]
stdweb = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }