[package]
name = "instant"
version = "0.1.1"
authors = ["sebcrozet <developer@crozet.re>"]
description = "A partial replacement for std::time::Instant that works on WASM too."
repository = "https://github.com/sebcrozet/instant"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [ "time", "wasm" ]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
now = ["time"]
wasm-bindgen = ["wasm_bindgen", "web_sys"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = { version = "0.4", optional = true }
wasm_bindgen = { package = "wasm-bindgen", version = "0.2", optional = true }
web_sys = { package = "web-sys", version = "0.3", optional = true, features = ['Window', 'Performance', 'PerformanceTiming'] }

[dev-dependencies]
wasm-bindgen-test = "0.2"
